お問い合わせページの追加

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,3 +30,6 @@ menu:
     - identifier: tags
       name: Tags
       url: /tags/
+    - identifier: issues
+      name: お問い合わせ
+      url: https://github.com/sqzume/sqzume.github.io/issues
